--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "typecheck:web": "vue-tsc --noEmit -p tsconfig.web.json --composite false",
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
-    "dev": "electron-vite dev",
+    "dev": "electron-vite dev --watch",
     "rebuild": "./node_modules/.bin/electron-rebuild",
     "build": "npm run typecheck && electron-vite build",
     "postinstall": "electron-builder install-app-deps",
