체크리스트 화면 개발 - vue-router 추가 - common css 추가 - 체크리스트관련 컴포넌트 추가

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/utils": "^3.0.0",
     "better-sqlite3": "^9.2.2",
-    "electron-updater": "^6.1.7"
+    "electron-updater": "^6.1.7",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.2",
@@ -34,6 +35,7 @@
     "@rushstack/eslint-patch": "^1.6.1",
     "@types/better-sqlite3": "^7.6.8",
     "@types/node": "^18.19.5",
+    "@types/vue-router": "^2.0.0",
     "@vitejs/plugin-vue": "^5.0.2",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
